# cad-to-graph-deterministic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
occ/: dataset_visualizer.py  graph_converter.py
profiles/: 0-0-0-0-0-23.profile.json  0-0-0-0-1-23.profile.json  0-0-0-0-10-23.profile.json  0-0-0-0-11-23.profile.json  0-0-0-0-12-23.profile.json  0-0-0-0-13-23.profile.json  0-0-0-0-14-23.profile.json  0-0-0-0-19.profile.json  0-0-0-0-2-23.profile.json  0-0-0-0-3-23.profile.json  0-0-0-0-4-23.profile.json  0-0-0-0-5-23.profile.json  0-0-0-0-6-23.profile.json  0-0-0-0-7-23.profile.json  0-0-0-0-8-23.profile.json  0-0-0-0-9-23.profile.json  0-0-0-1-1-23.profile.json  0-0-0-1-10-23.profile.json  0-0-0-1-11-23.profile.json  0-0-0-1-12-23.profile.json  0-0-0-1-13-23.profile.json  0-0-0-1-14-23.profile.json  0-0-0-1-19.profile.json  0-0-0-1-2-23.profile.json  0-0-0-1-3-23.profile.json  0-0-0-1-4-23.profile.json  0-0-0-1-5-23.profile.json  0-0-0-1-6-23.profile.json  0-0-0-1-7-23.profile.json  0-0-0-1-8-23.profile.json  0-0-0-1-9-23.profile.json  0-0-0-10-10-23.profile.json  0-0-0-10-11-23.profile.json  0-0-0-10-12-23.profile.json  0-0-0-10-13-23.profile.json  0-0-0-10-14-23.profile.json  0-0-0-10-19.profile.json  0-0-0-11-11-23.profile.json  0-0-0-11-12-23.profile.json  0-0-0-11-13-23.profile.json  (+15448 more)
